# gffcompare

./: CMakeLists.txt  gffcompare.cpp
